// Vitest Snapshot v1

exports[`Badge > should render a small dot when count>0 without showCount 1`] = `
<div>
  <div
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-27p99g-StyledContainer e14fbj1m1"
    >
      <div
        class="css-1cxkspw-StyledBadge e14fbj1m0"
      />
    </div>
  </div>
</div>
`;

exports[`Badge > should render correctly with custom label 1`] = `
<div>
  <div
    aria-label="New!"
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-27p99g-StyledContainer e14fbj1m1"
    >
      <div
        class="css-15sftp8-StyledBadge e14fbj1m0"
      >
        New!
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > should render correctly with custom one-character label 1`] = `
<div>
  <div
    aria-label="!"
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-27p99g-StyledContainer e14fbj1m1"
    >
      <div
        class="css-1rub5ty-StyledBadge e14fbj1m0"
      >
        !
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > should render correctly with maxCount 1`] = `
<div>
  <div
    aria-label="99+"
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-27p99g-StyledContainer e14fbj1m1"
    >
      <div
        class="css-1ggpb7s-StyledBadge e14fbj1m0"
      >
        99+
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > should render correctly with showCount 1`] = `
<div>
  <div
    aria-label="12"
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-27p99g-StyledContainer e14fbj1m1"
    >
      <div
        class="css-1ggpb7s-StyledBadge e14fbj1m0"
      >
        12
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > should render correctly with showCount and one-digit count 1`] = `
<div>
  <div
    aria-label="9"
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-27p99g-StyledContainer e14fbj1m1"
    >
      <div
        class="css-ti3ozx-StyledBadge e14fbj1m0"
      >
        9
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > should render correctly with svg 1`] = `
<div>
  <div
    aria-label="99+"
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-du18qm"
      name="Alert"
    >
      <svg
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="color0"
          d="M14 12V8a5.884 5.884 0 0 0-4-5.666V2a2 2 0 0 0-4 0v.334A5.884 5.884 0 0 0 2 8v4H0v1h6v1a2 2 0 0 0 4 0v-1h6v-1zM7 2a1 1 0 0 1 2 0v.086a5.85679 5.85679 0 0 0-2 0zm2 12a1 1 0 0 1-2 0v-1h2zm-6-2V8a5 5 0 0 1 10 0v4z"
          fill="var(--colors-acce1)"
        />
      </svg>
    </div>
    <div
      class="css-1ab0lly-StyledContainer e14fbj1m1"
    >
      <div
        class="css-1ggpb7s-StyledBadge e14fbj1m0"
      >
        99+
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > should render correctly with text 1`] = `
<div>
  <div
    aria-label="99+"
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <p
      class="css-y9wk7b-StyledTypography e1bct5r50"
    >
      hello
    </p>
    <div
      class="css-1ab0lly-StyledContainer e14fbj1m1"
    >
      <div
        class="css-1ggpb7s-StyledBadge e14fbj1m0"
      >
        99+
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > should render custom label but not count when both are specified 1`] = `
<div>
  <div
    aria-label="New!"
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-27p99g-StyledContainer e14fbj1m1"
    >
      <div
        class="css-15sftp8-StyledBadge e14fbj1m0"
      >
        New!
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > should render nothing when count is 0 even with showCount 1`] = `
<div>
  <div
    class="css-1q5qni0-StyledRoot e14fbj1m2"
  >
    <div
      class="css-27p99g-StyledContainer e14fbj1m1"
    >
      <div
        class="css-3p36c7-StyledBadge e14fbj1m0"
      />
    </div>
  </div>
</div>
`;
